# lss_fms5_alert_homeassistant

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  lss_fms5_alert_homeassistant.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-docker.yml  build-exe.yml
